@@ -7,6 +7,9 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 ## [Unreleased]
 
+* Users can be created with additional groups.
+* Users may be restricted from calling sudo.
+
 ## [0.1.2] - 2019-08-04
 
 ### Fixed
